--- a/style.css
+++ b/style.css
@@ -26,7 +26,7 @@ body {
 }
 
 .icone{
-	font-size: 3vw;
+	font-size: 2.2vw;
 	display: inline-flex;
 	margin: auto;
 	padding: 1px;
@@ -58,8 +58,8 @@ i{
 	grid-column: 1;
 	margin: auto;
 	background-image: url(images/Charlene.jpg);
-	width: 150px;
-	height: 150px;
+	max-width: 150px;
+	max-height: 150px;
 	border-radius: 100%;
 	background-size: cover;
 	border: 2px solid #262120;
@@ -74,7 +74,7 @@ i{
 h1{
 	font-family: 'Open Sans Condensed', sans-serif;
 	font-weight: initial;
-	font-size: 7vh;
+	font-size: 3.4vw;
 	text-transform: uppercase;
 	line-height: 2px;
 }
@@ -99,8 +99,47 @@ h3{
 	font-size: 15px;
 	border-radius: 7px;
 }
+/* Icônes */
+#Icontact{
+	margin: 4% 0% 4% 0%;
+}
 
-/* -- O N G L E T ------------------------------------------------------------ */
+/* Contact */
+.input{
+	background-color: #7A857E;
+	border: none;
+	border-radius: 3px;
+	margin:1%;
+	padding: 1%;
+	width: 20vw;
+}
+
+.input:hover{
+	background-color: #818C85;
+}
+
+.input:focus{
+	border: 1px solid #732238;
+}
+
+input[type="submit"]{
+	background-color: #732238;
+	border: none;
+	border-radius: 3px;
+	padding:6px;
+	margin:7px 0px 10px 4.8px;
+}
+
+input[type="submit"]:hover{
+	background-color: #F24150;
+}
+
+input[type="submit"]:active{
+	background-color: #262120;
+}
+
+
+/* Onglet */
 #Onglet{
 	color: #64DFA6;
 	z-index: 2;
@@ -115,14 +154,19 @@ h3{
 	border-radius: 0px 8px 8px 0px;
 }
 
+
+
 #Italic{
 	font-weight: lighter;
 }
 
 h4{
-	padding: 5% 0% 0% 0%
+	padding: 5% 0% 0% 0%;
+	font-size: 1.1vw
+
 }
 /* -- D R O I T E ------------------------------------------------------------ */
+
 #Scroll {
 	margin: 0% 0% 0% 30%;
 	padding: 0% 0% 0% 0%;
@@ -132,22 +176,225 @@ h4{
 	position: relative;
 }
 
-#Training{
-	background-color: #CF5A65;
-	padding: 0% 0% 0% 15%;
-}
 
-#speaking{
-	background-color: #C2285E;
-	padding: 0% 0% 0% 15%;
-}
 
-#Language{
-	background-color: #A11F30;
-	padding: 0% 0% 0% 15%;
-}
+
 
 #Portfolio{
 	background-color: #7A3B47;
 	padding: 0% 0% 0% 15%;
+	margin: 0% 5% 5% 0%;
+	border-radius: 0px 8px 8px 0px;
+}
+
+h5{
+	margin: 3% 0% 3% 30%;
+	padding: 0% 0% 0% 0%;
+	width: 70%;
+	text-transform: uppercase;
+	font-size: 3vw;
+	font-family: 'Open Sans Condensed', sans-serif;
+	font-weight: lighter;
+	color: #7A857E;
+	letter-spacing: 1vw;
+}
+
+h6{
+	writing-mode: vertical-rl;
+	text-orientation: mixed;
+	margin: 20px 20px 2px 20px;
+	grid-column: 1;
+	grid-row: 2;
+	text-transform: uppercase;
+	font-family: 'Open Sans Condensed', sans-serif;
+	font-size: 1.1vw;
+}
+
+.details{
+	font-size: 13px;
+	font-family: 'Open Sans Condensed', sans-serif;
+	font-weight: lighter;
+	}
+
+
+
+/* training */
+#Training{
+	background-color: #CF5A65;
+	padding: 5% 10% 5% 7%;
+	margin: 0% 5% 5% 0%;
+	border-radius: 0px 8px 8px 0px;
+	display: grid;
+	grid-template-columns: 5% 47.5% 47.5%;
+	grid-template-rows: 5% 45%;
+	grid-column-gap:2%;
+	font-size: 15px;
+	overflow: hidden;
+}
+
+#Studies{
+	grid-column: 2/3;
+	grid-row: 1/3;
+}
+
+#Career{
+	grid-column:3/4; 
+	grid-row: 1/3;
+}
+
+/* speaking */
+#Speaking{
+	background-color: #C2285E;
+	padding: 5% 10% 5% 7%;
+	margin: 0% 5% 5% 0%;
+	border-radius: 0px 8px 8px 0px;
+	display: grid;
+	grid-template-columns: 5% repeat(4, 23.75%);
+	grid-template-rows: 5% 45%;
+	grid-column-gap:2%;
+	font-size: 15px;
+	overflow: hidden;
+}
+
+#Speaking div{
+	grid-row: 1/3;
+}
+
+/* language */
+
+#Language{
+	background-color: #A11F30;
+	padding: 5% 10% 5% 7%;
+	margin: 0% 5% 5% 0%;
+	border-radius: 0px 8px 8px 0px;
+	display: grid;
+	grid-template-columns: 5% repeat(4, 23.75%);
+	grid-template-rows: 5% 45%;
+	grid-column-gap:2%;
+	font-size: 15px;
+	overflow: hidden;
+}
+
+#Language div{
+	grid-row: 1/3;
+}
+
+
+
+/* portfolio */
+
+#Portfolio{
+	background-color: #7A3B47;
+	padding: 0% 0% 5% 7%;
+	margin: 0% 5% 5% 0%;
+	border-radius: 0px 8px 8px 0px;
+	display: grid;
+	grid-template-columns: 5% repeat(4, 23.75%);
+	grid-template-rows: 5% 45%;
+	grid-column-gap:2%;
+	font-size: 15px;
+	overflow: hidden;
+}
+
+#Portfolio div{
+	grid-row: 1/3;
+}
+
+/* -- T E L E P H O N E ------------------------------------------------------------ */
+@media only screen and (max-width: 765px){
+
+/*Acceuil*/
+#Resume {
+	height: 100%;
+	width: 85%;
+	padding: 1% 3% 3% 3%;
+	z-index: 1;
+}
+
+#Onglet{
+	height: 36vh;
+	width: 10%;
+	z-index: 2;
+	margin: 0% 0% 0% 90%;
+}
+#Presentation {
+	display:grid;
+	grid-template-columns: 30% 70%;
+}
+
+#Photo {
+	grid-column: 1;
+	margin: auto;
+	background-image: url(images/Charlene.jpg);
+	min-width: 100px;
+	min-height: 100px;
+	border-radius: 100%;
+	background-size: cover;
+	border: 2px solid #262120;
+
+}
+
+#Nom {
+	grid-column: 2;	
+	margin:0px 0px 0px 40px;
+}
+
+h1{
+	font-family: 'Open Sans Condensed', sans-serif;
+	font-weight: initial;
+	font-size: 3.4vw;
+	text-transform: uppercase;
+	line-height: 2px;
+}
+
+h2{
+	font-family: 'Parisienne', cursive;
+	font-size: 2.6vw;
+	line-height: 20px;
+}
+
+h3{
+	font-family: 'Open Sans Condensed', sans-serif;
+	font-weight: bold;
+	text-transform: uppercase;
+	margin: 5% 0% 0% 5%;
+}
+
+.box1{
+	background-color: #64DFA6;
+	padding: 2% 4% 2% 4%; 
+	margin: -3% 5% 0% 5%;
+	font-size: 15px;
+	border-radius: 7px;
+}
+/* Icônes */
+#Icontact{
+	margin: 4% 0% 4% 0%;
+}
+
+/* Contact */
+.input{
+	background-color: #7A857E;
+	border: none;
+	border-radius: 3px;
+	margin:1%;
+	padding: 1%;
+	width: 20vw;
+}
+
+.input:hover{
+	background-color: #818C85;
+}
+
+.input:focus{
+	border: 1px solid #732238;
+}
+
+input[type="submit"]{
+	background-color: #732238;
+	border: none;
+	border-radius: 3px;
+	padding:6px;
+	margin:7px 0px 10px 4.8px;
+}
 }
