--- a/asset/style/base/_onglets.scss
+++ b/asset/style/base/_onglets.scss
@@ -1,24 +1,19 @@
-@import "../variables/mediaQueries";
 
 .onglet{
+	position: relative;
+	writing-mode: vertical-lr;
+    text-transform: uppercase;
+    font-size: 3.3vw;
+    font-weight: bold;
+	text-align: right;
+	color: map-get($nuance-color, ligth1 );
+	border-radius: 0px 1.6vw 1.6vw 0px;
+    grid-column: 3/3;
+	min-height: min-content;
 	@include section-shadow();
 	@include onglet-shadow();
-
-	@include sm{
-		font-size: 0.8em;
-	}
-	// grid-column: 3/3;
-
-	position: relative;
-
-	writing-mode: vertical-lr;
-	text-transform: uppercase;
-	text-align: right;
-	color: $color;
-
-	border-radius: 0px 5px 5px 0px;
-
-	padding-left: 3%;
+	@include laptop {font-size: 1.5vw;}
+	@include desktop {font-size: 1vw; border-radius: 0px 5px 5px 0px;}
 	&#onglet_1{
 		text-align: center;
 		
@@ -28,11 +23,13 @@
 		padding: 5% 0% 5% 0%;
 
 		grid-row: 1/span 1;
-		grid-column: 2/2;
+		@include laptop {grid-column: 2/span 1;}
+		@include desktop {padding:0%;grid-column: 2/2};
 
 		.onglet__txt{
 			font-weight: bolder;
-			color: white
+			color: white;
+			margin-bottom: 2%;
 		};
 	};
 
@@ -40,47 +37,50 @@
 		background-color: map-get($nuance-grey,ligth3);
 		z-index: 6;
 
-		grid-row: 2/span 2;
+		grid-row: 1/span 2;
+		@include desktop {grid-row: 2/span 2};
 	};
 
 	&#onglet_3{
 		background-color: map-get($nuance-grey,ligth2);
 		z-index: 5;
 
-		grid-row: 2/span 3;
+		grid-row: 1/span 3;
+		@include desktop {grid-row: 2/span 3};
 	};
 
 	&#onglet_4{
 		background-color: map-get($nuance-grey,ligth1);
 		z-index: 4;
 
-		grid-row: 2/span 4;
+		grid-row: 1/span 4;
+		@include desktop {grid-row: 2/span 4};
 	};
 
 	&#onglet_5{
 		background-color: map-get($nuance-grey,ligth0);
 		z-index: 3;
 
-		grid-row: 2/span 5;
+        grid-row: 1/span 5;
+        
+        padding: 0% 0% 60% 16%;
+		@include desktop {grid-row: 2/span 5;padding: 0% 0% 12% 6%;};
 
 		i{
 			font-size: 2em;
 			padding: 9px;
-			transition: color 0.3s;
-
-			&:hover{
-				color: map-get($nuance-color, ligth1)
-			}
 		};
 		
 	};
 
 	&:not(#onglet_1){
-
+		
 		.onglet__txt{
 		font-weight: normal;
 		margin-bottom: 25px;
 	};
 	}
-
+	@include tablet {
+        font-size:2.6vw
+	};
 };
