--- a/asset/style/base/_presentation.scss
+++ b/asset/style/base/_presentation.scss
@@ -1,47 +1,49 @@
-@import "../variables/mediaQueries";
+@import '../variables/mediaQueries';
 
 #presentation{
-
-	@include sm{
-		grid-template-rows: 50% 20% 30%;
-		#bulle{
-			top:25%;
-			#txt_bulle{
-				font-size: 2.3em;
-			}
-		}
-	};
-
-	grid-row: 1/span 6;
-	grid-column: 1/span 1;
+	height: 100%;
 
 	display: grid;
-	grid-template-rows: 40% 20% 40%;
+	grid-template-rows: 39% 16% 1fr;
 
 	padding-left: 10%;
+	padding-bottom: 10%;
 
-    background-color: $color;
+	position: relative;
+
+	background-color: $color;
 	color: $grey;
 	box-shadow: 12px 8px 15px -5px #000000;
 
+	@include tablet {
+		grid-template-rows: 38% 17% 1fr;
+	};
+	@include laptop {
+		grid-template-rows: 35% 15% 1fr;
+		#presentation_img{
+			display: grid;
+			grid-template-columns: repeat(2,50%);
+		};
+	};
+	@include desktop {
+		display: grid;
+		grid-template-rows: 39% 17% 1fr;
+		padding-left: 10%;
+	};
 
-	z-index: 5;
-	
 	#illustration{
 		@include div-image(tête1,contain);
 		background-position: bottom;
-
 		height: 100%; 
 		width: 50%;
+
 	};
 
 	#bulle{
 		@include div-image(bulle,contain);
-
-
 		height: 100%;
 		width: 50%;
-
+		
 		position: relative;
 		top: 15%;
 		right: 5%;
@@ -49,20 +51,21 @@
 		transition: top 0.5s;
 
 		.zone_clicable{
-			width: 100%;
-			height: 40%;
-			position: absolute;
+			display: none;
 		};
 
 		#txt-bulle{
 			color: $color;
-			font-size: 3em;
+			font-size: 9vw;
+			
 			text-align: center;
 
 			display: block;
 			box-sizing: border-box;
 			padding-left: 12%;
 			padding-top: 15%;
+			@include laptop{font-size: 4vw;}
+			@include desktop{font-size: 3vw;}
 		};
 	};
 
@@ -71,42 +74,58 @@
 			font-family: $roboto;
 			font-weight: 700;
 			text-transform: uppercase;
-			font-size: 3vw;
+			font-size: 8vw;
 			margin: 8% auto 0% auto;
 			color: map-get($nuance-color,ligth1);
+			@include laptop{font-size: 4vw;}
+			@include desktop{font-size: 3vw;}
 		};
 
 		h2{
 			font-family: $open;
 			font-weight: lighter;
-			margin: 0 13% 0 auto;
-			font-size: 3.2vw;
-			text-align: right;
+			margin: 0 15% 0 auto;
+			font-size: 7vw;
+			text-align: right;			
+			@include laptop{font-size: 3.7vw;}
+			@include desktop{font-size: 3.2vw;}
 		};
 	};
 
 	#introduction{
 
 		color: map-get($nuance-grey, ligth0);
-		font-size: 1.2vw;
+		font-size: 4vw;
+		
 		text-align: center;
 		font-style: italic;
 
-		padding: 13% 13% 0% 0%;
+		padding: 0% 13% 5% 0%;
 
+		display:grid;
+		grid-template-rows: 15% 50% 15% 1fr;
+		@include laptop{font-size: 1.7vw;}
+		@include desktop{font-size: 1.2vw;}
 		.txt-slide{
-			width: 80%;
-			height: 10em;
-			margin: auto;
+			grid-row: 2/span 1;
+			display: none;
+			text-align: center;
+			@include laptop{padding: 0% 10%;};
+			@include desktop{padding: 0% 16% 0% 10%;};
+		};
+
+	};
+
+	@include tablet {
+		#introduction{
+			font-size: 3vw;
+			padding: 0% 15% 5% 3%;
+			.txt-slide{
+				padding: 0% 13% 0% 10%
+			}
 		}
+	
 	}
-
-	// #ico-slide{
-	// 	color: map-get( $nuance-color, ligth1);
-	// 	font-size: 1.5em;
-	// 	padding-top: 3%;
-	// }
-
 };
 
 
