--- a/asset/style/base/_reseaux.scss
+++ b/asset/style/base/_reseaux.scss
@@ -1,4 +1,4 @@
-#reseaux{
-    background-color: map-get($nuance-grey,ligth0);
-    z-index: 1;
-}
+// #reseaux{
+//     background-color: map-get($nuance-grey,ligth0);
+//     z-index: 1;
+// }
