--- a/asset/style/component/_graphs.scss
+++ b/asset/style/component/_graphs.scss
@@ -1,69 +1,136 @@
 //_GRAPH
+
 .chart_and_labels{
+	display:none;
 	grid-column: span 2;
-
-	display: grid;
-	grid-template-columns: 50% 50%;
-	grid-template-rows: 100%;
-
-	justify-items: center;
-
-	&.reverse{
-		.chart{
-			grid-column: 2/span 1;
+	box-sizing: border-box;
+	padding-left: 10%;
+	@include laptop{
+		display: flex;
+		padding-left: 0%;
+		margin-bottom: 8%;
+		&.reverse{
+			&#second_part{
+				margin-top: 15%;
+			};
+			margin-bottom: 5%;
+			margin-bottom: 10%;
+			flex-direction: row-reverse;
+			.chart{
+				grid-column: 2/span 1;
+			}
+			.labels{
+				grid-column: 1/span 1;
+				margin-right: 15%;
+				margin-left:0%;
+				.label{
+					flex-direction: row-reverse;
+					.label_img{
+						margin-right: 0;
+						margin-left: 15px;
+					}
+				}
+			}
 		}
-		.labels{
-			grid-column: 1/span 1;
-			.label{
-				flex-direction: row-reverse;
-				.label_img{
-					margin-right: 0;
-					margin-left: 15px;
+	};
+	@include desktop{
+		grid-column: span 2;
+		height: min-content;
+		display: grid;
+		grid-template-columns: 50% 50%;
+		justify-items: center;
+
+		&.reverse{
+			height: min-content;
+			&#second_part{
+				margin-top: 5%;
+			};
+			.chart{
+				grid-column: 2/span 1;
+			}
+			.labels{
+				grid-column: 1/span 1;
+				grid-row: 1/span 1;
+				.label{
+					flex-direction: row-reverse;
+					.label_img{
+						margin-right: 0;
+						margin-left: 15px;
+					}
 				}
 			}
 		}
 	}
-
 	.chart{
-		grid-column: 1/span 1;
 		position: relative;
+		grid-column: 1/span 1;
+        
+        justify-content: center;
+        align-items: center;
+
 		.chart_titre{
+			margin:0;
 			width: 100%;
 
 			font-family: $roboto;
 			font-weight: lighter;
 			color: white;
-			font-size: 1.1em;
+			font-size: 5vw;
+
 			text-transform: uppercase;
 			text-align: center;
-
-			position: absolute;
+            position: absolute;
+			@include tablet {font-size: 4.5vw;};
+			@include laptop {font-size: 1.9vw;};
+			@include desktop {font-size: 0.8vw;};
 		};
+	
 
 	};
 
 	.labels{
-		grid-column: 2/span 2;
 
-		display: flex;
-		flex-direction: column;
-		justify-content: center;
-
+		display: grid;
+		grid-template-columns: 50% 50%;
+		margin-top: 5%;
 		width: 100%;
+		@include laptop{
+			display: flex;
+			flex-direction:column;
+			justify-content: center;
+			line-height: 10%;
+			margin-top:0%;
+			margin-left:15%
+		};
+		@include desktop{
+			display: flex;
+			flex-direction:column;
+			justify-content: center;
+			line-height: 10%;
+			margin-top:0%;
+			margin-left:15%
+		};
 
 		.label{
-			width: 100%;
-			height: 15%;
 			display: flex;
-		
+			flex-direction: row;
+			align-items: center;
+			font-size: 4vw;
+			width:100%;
+			@include tablet {font-size: 2.5vw;};
+			@include laptop {font-size: 1.7vw; margin-top: 0%};
+			@include desktop {font-size: 0.8vw;};
+		}
 
-		.label_img{
-			width: 15px;
-			height: 15px;
-			background-image: url(map-get($image, labels));
+		.label_img{ 
+            height: calc(2vh + 2vw);
+            width: calc(2vh + 2vw);
+            background-image: url(map-get($image, labels));
 			background-size:cover;
-			margin-right: 15px;
-
+			margin-right: 5%;
+			@include tablet {height: calc(1.5vh + 1.5vh);width: calc(1.5vh + 1.5vh);}
+			@include laptop {height: calc(1.4vh + 1.4vh);width: calc(1.4vh + 1.4vh);}
+			@include desktop {height: calc(1vh + 1vh);width: calc(1vh + 1vh);}
 			&.label_2{
 				background-position: 100% 25%;
 			}
@@ -78,7 +145,9 @@
 			&.label_5{
 				background-position: 100% 100%;
 			}
-		}
+		};
+		
+		
 	};
-	}
+	
 };
