--- a/asset/style/component/_progressBar.scss
+++ b/asset/style/component/_progressBar.scss
@@ -1,39 +1,61 @@
 .progress_bar{
 	width: 100%;
-	height: 11px;
+	height: 3vw;
 	background-color: map-get($nuance-grey, ligth1 );
+    -webkit-box-shadow: inset 5px 5px 15px 5px #1F1F1F; 
+    box-shadow: inset 5px 5px 15px 5px #1F1F1F;
 	border-radius: 24px;
 	margin: 5% 0% 7% 0%;
-	.progress{
+	@include tablet{height: 2vw;}
+	@include laptop{height: 1.1vw;}
+	@include desktop{height: 0.7vw;}
+	.b_progress{
 		width: 97%;
-		height: 11px;
+		height: 3vw;
 		background-color: map-get( $nuance-color, ligth0 );
 		border-radius: 24px;
 		margin: 5% 0% 7% 0%;
+		@include tablet{height: 2vw;}
+		@include laptop{height: 1.1vw;}
+		@include desktop{height: 0.7vw;}
 	}
+
+
 };
 
 .progress_punt{
     display:flex;
 	width: 100%;
-	height: 30px;
+	height: 4vh;
 	background-image: url(map-get( $image, progress_punt));
-    background-size: 250px;
+    background-size: 61.4vw;
     background-repeat: no-repeat;
 	margin: 2% 0% 10% 0%;
     background-position: 0px bottom;
-    
+	@include tablet {height: 4.5vh;}
+	@include laptop {
+		background-size: 37.4vw;
+		height: 4.9vh;
+	}
+    @include desktop{
+		height: 1.9vw;
+		background-size: 15.9vw;
+	}
 	.p_progress{
 		width: 100%;
-		height: 30px;
+		height: 100%;
 		background-image: url(map-get( $image, progress_punt));
-        background-size: 250px;
+        background-size: 61.4vw;
         background-repeat: no-repeat;
-		margin: 2% 0% 10% 0%;
 		background-position: 0px top;
+		@include laptop {background-size: 37.4vw;}
+		@include desktop {background-size: 15.9vw;}
     }
     .d_progress{
-        height: 30px;
-        margin: 2% 14% 10% 0%;
-    }
+        height: 100%;
+		margin-right: 1%;
+		@include tablet{margin-right: 4%;}
+		@include laptop{margin-right: 3%;}
+    };
+
 }
